--- a/English.lproj/MyDocument.xib
+++ b/English.lproj/MyDocument.xib
@@ -16,7 +16,6 @@
                 <outlet property="libraryListing" destination="680" id="693"/>
                 <outlet property="loopingToggle" destination="854" id="1144"/>
                 <outlet property="mediaBoxContent" destination="846" id="878"/>
-                <outlet property="playlistTable" destination="646" id="648"/>
                 <outlet property="rightSplitterView" destination="869" id="870"/>
                 <outlet property="songArtist" destination="1900" id="1911"/>
                 <outlet property="songCopyright" destination="1874" id="1912"/>
@@ -37,6 +36,14 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
+        <arrayController objectClassName="Playlist" id="hjG-Eo-CY1" userLabel="Playlist">
+            <declaredKeys>
+                <string>playlistTitle</string>
+            </declaredKeys>
+            <connections>
+                <binding destination="-2" name="contentArray" keyPath="playlist" id="pvk-ql-MJi"/>
+            </connections>
+        </arrayController>
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" wantsToBeColor="NO" visibleAtLaunch="NO" animationBehavior="default" id="5" userLabel="MainDocument">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES" unifiedTitleAndToolbar="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -73,12 +80,11 @@
                                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                            <connections>
+                                                <binding destination="hjG-Eo-CY1" name="value" keyPath="arrangedObjects.playlistTitle" id="cVG-1O-qCR"/>
+                                            </connections>
                                         </tableColumn>
                                     </tableColumns>
-                                    <connections>
-                                        <outlet property="dataSource" destination="-2" id="649"/>
-                                        <outlet property="delegate" destination="-2" id="650"/>
-                                    </connections>
                                 </tableView>
                             </subviews>
                             <color key="backgroundColor" name="gridColor" catalog="System" colorSpace="catalog"/>
@@ -1091,7 +1097,7 @@ DQ
                 <button id="2687">
                     <rect key="frame" x="4" y="5" width="203" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <buttonCell key="cell" type="check" title="Multiple slides separated by verse" bezelStyle="regularSquare" imagePosition="left" alignment="left" controlSize="small" state="on" imageScaling="proportionallyDown" inset="2" id="2688" customClass="BGHUDButtonCell">
+                    <buttonCell key="cell" type="check" title="Multiple slides separated by verse" bezelStyle="regularSquare" imagePosition="left" alignment="left" controlSize="small" state="on" inset="2" id="2688" customClass="BGHUDButtonCell">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                     </buttonCell>
