--- a/English.lproj/MyDocument.xib
+++ b/English.lproj/MyDocument.xib
@@ -35,7 +35,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <arrayController objectClassName="Playlist" id="hjG-Eo-CY1" userLabel="Playlist" customClass="PlaylistArrayController">
+        <arrayController objectClassName="Playlist" id="hjG-Eo-CY1" userLabel="Playlist" customClass="PlaylistController">
             <declaredKeys>
                 <string>playlistTitle</string>
             </declaredKeys>
@@ -58,17 +58,17 @@
                         <rect key="frame" x="0.0" y="326" width="250" height="341"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="09c-aA-BH2">
-                            <rect key="frame" x="0.0" y="0.0" width="250" height="341"/>
+                            <rect key="frame" x="0.0" y="0.0" width="234" height="341"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="18" id="646" customClass="IWTableView">
-                                    <rect key="frame" x="0.0" y="0.0" width="250" height="341"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="234" height="341"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" red="0.23999999" green="0.23999999" blue="0.23999999" alpha="1" colorSpace="deviceRGB"/>
                                     <color key="gridColor" red="0.84695202000000003" green="0.84998857999999999" blue="0.82421606999999997" alpha="1" colorSpace="calibratedRGB"/>
                                     <tableColumns>
-                                        <tableColumn width="246.7842" minWidth="41.784179999999999" maxWidth="1000" id="647">
+                                        <tableColumn width="230.7842" minWidth="41.784179999999999" maxWidth="1000" id="647">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Playlist">
                                                 <font key="font" metaFont="label"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -124,17 +124,17 @@
                         <rect key="frame" x="-5" y="30" width="255" height="272"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <clipView key="contentView" id="vuv-dW-Dvh">
-                            <rect key="frame" x="0.0" y="0.0" width="255" height="272"/>
+                            <rect key="frame" x="0.0" y="0.0" width="239" height="272"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <outlineView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="13" indentationPerLevel="16" outlineTableColumn="681" id="680" customClass="IWOutlineView">
-                                    <rect key="frame" x="0.0" y="0.0" width="255" height="272"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="239" height="272"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" red="0.23999999" green="0.23999999" blue="0.23999999" alpha="1" colorSpace="deviceRGB"/>
                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                     <tableColumns>
-                                        <tableColumn editable="NO" width="252" minWidth="16" maxWidth="1000" id="681">
+                                        <tableColumn editable="NO" width="236" minWidth="16" maxWidth="1000" id="681">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                 <font key="font" metaFont="label"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
